syntax = "proto3";

option  go_package = "amusing-x.com/user/service";

package user;

message CountryCode {
  int64 id = 1;
  string cname = 2;
  string code = 3;
  string create_time = 4;
  string update_time = 5;
}

message CountryCodeList {
  repeated CountryCode country_code_list = 1;
}