syntax = "proto3";

option  go_package = "amusing-x.com/user/service";

package user;

message LogoutRequest {
  string sessionID = 1;
}

message LogoutResponse {
  bool logout = 1;
}